#75491 - Fix jumping images,dots, thumbs on mobile

--- a/Magento_Catalog/styles/modules/_fotorama.scss
+++ b/Magento_Catalog/styles/modules/_fotorama.scss
@@ -27,7 +27,7 @@
             }
 
             .fotorama__arr--disabled {
-                display: none !important;
+                display: none !important; // sass-lint:disable-line no-important
             }
 
             .fotorama__thumb__arr {
@@ -195,7 +195,16 @@
     &__wrapper {
         width: 100%;
 
+        &:not(._block-content-loading) {
+            padding: 0 !important; // sass-lint:disable-line no-important
+        }
+
         &._block-content-loading {
+            .fotorama__nav--dots,
+            .fotorama__nav--thumbs {
+                display: none;
+            }
+
             @include mq($screen-l) {
                 margin-left: 100px;
                 & > *:not(.loader) {
